fixed width for right align. inline on socials

--- a/style.css
+++ b/style.css
@@ -143,7 +143,7 @@ p {
 }
 
 .hh-right {
-  max-width: 452px;
+  max-width: 500px;
   order: 1;
 }
 
